<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="829px"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_dialog">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginTop="30px"
            android:text="@string/app_info"
            android:textColor="@color/color_text_black"
            android:textSize="34px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_error"
            android:layout_width="168px"
            android:layout_height="168px"
            android:layout_marginTop="95px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/mipmap_error" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48px"
            android:text="@string/dialog_error_1"
            android:textColor="@color/color_text_black"
            android:textSize="50px"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_error" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48px"
            android:gravity="center"
            android:text="@string/dialog_error_2"
            android:textColor="@color/color_text_grey"
            android:textSize="37px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />


        <com.miaxis.judicialcorrection.widget.countdown.CountDownTextView
            android:id="@+id/cdtv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="125px"
            android:layout_marginBottom="125px"
            android:textColor="@color/color_text_red"
            android:textSize="47px"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_message"
            app:layout_goneMarginTop="48px" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>