<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_app_background_glass" />

        <include
            android:id="@+id/tv_app_title"
            layout="@layout/layout_app_title"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="165px"
            android:gravity="center"
            android:textColor="@color/color_text_title"
            android:textSize="68px"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_app_title"
            tools:text="@string/page_title_1" />


        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_read_id_card_placeholder"
            android:layout_width="867px"
            android:layout_height="456px"
            android:layout_marginTop="153px"
            android:scaleType="fitXY"
            android:src="@mipmap/mipmap_read_id_card_placeholder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_no_id_card_entry"
            android:layout_width="809px"
            android:layout_height="124px"
            android:layout_marginTop="160px"
            android:background="@drawable/bg_btn_no_id_card_entry"
            android:gravity="center"
            android:text="@string/btn_text_no_id_card_entry"
            android:textColor="@color/color_text_btn"
            android:textSize="48px"
            android:visibility="gone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_read_id_card_placeholder"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back_to_home"
            android:layout_width="809px"
            android:layout_height="124px"
            android:layout_marginTop="69px"
            android:background="@drawable/bg_btn_back_to_home"
            android:gravity="center"
            android:text="@string/btn_text_back_to_home"
            android:textColor="@color/color_text_btn"
            android:textSize="48px"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_no_id_card_entry"
            app:layout_goneMarginTop="169px" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>